data-git/worldmodel/worldmodel/test/requirement-test-derived-predicates.p.pddl.Maxplan.stderr

requirement-test-derived-predicates.d.pddl: syntax error in line 3, ':DERIVED-PREDICATES':
requirement %s not supported by this IPP version :DERIVED-PREDICATES
