data-git/worldmodel/worldmodel/test/requirement-test-derived-predicates.p.pddl.LPG.sol.SOL

; Version LPG-td-1.0
; Seed 22915016
; Command line: /var/lib/myfrdcsa/codebases/internal/verber/data/planner-library/lpg-td-1.0 -o requirement-test-derived-predicates.d.pddl -f requirement-test-derived-predicates.p.pddl -out /var/lib/myfrdcsa/codebases/internal/verber/data/worldmodel/test/requirement-test-derived-predicates.p.pddl.LPG.sol -speed 
; Problem requirement-test-derived-predicates.p.pddl
; Actions having STRIPS duration
; Time 0.02
; Search time 0.01
; Parsing time 0.00
; Mutex time 0.01
; NrActions 1

0:   (ACTION1 OBJ1 OBJ2) [1]
